After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761309 - Background missing for empty treeview
Background missing for empty treeview
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-01-29 21:05 UTC by Christoph Reiter (lazka)
Modified: 2016-01-30 23:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christoph Reiter (lazka) 2016-01-29 21:05:43 UTC
Since a few days empty tree views don't have a background.

1) gtk3-demo
2) Tree View -> Editable Cells
3) Click "Remove Item" until all rows are gone
4) Background is no longer drawn but should be white.